scripts/compilation/annotator/url29ecd5d728_geodb_db3dcore_tgz-pJ8-de_uos_igf_db3d_dbms_model3d_SegmentNetBuilderJ8.txt
../annotator/url29ecd5d728_geodb_db3dcore_tgz-pJ8-de_uos_igf_db3d_dbms_model3d_SegmentNetBuilderJ8/src/de/uos/igf/db3d/dbms/model3d/TriangleElt3D(1).java:25: error: class TriangleElt3D is public, should be declared in a file named TriangleElt3D.java
public class TriangleElt3D extends Triangle3D implements NetElement3D {
       ^
../annotator/url29ecd5d728_geodb_db3dcore_tgz-pJ8-de_uos_igf_db3d_dbms_model3d_SegmentNetBuilderJ8/src/de/uos/igf/db3d/dbms/model3d/TriangleElt3D.java:25: error: duplicate class: de.uos.igf.db3d.dbms.model3d.TriangleElt3D
public class TriangleElt3D extends Triangle3D implements NetElement3D {
       ^
Note: ../annotator/url29ecd5d728_geodb_db3dcore_tgz-pJ8-de_uos_igf_db3d_dbms_model3d_SegmentNetBuilderJ8/src/de/uos/igf/db3d/dbms/impl/Object3DImpl.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
